# sinistra

./: Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml
examples/: basic_graph.rs  bfs_distances.rs  dfs_events.rs  dijkstra_cities.rs  dijkstra_distances.rs
src/graph/: basic_graph.rs  graph.rs  graph_ext.rs  graph_trait.rs  handle.rs  mod.rs
src/graph/algorithm/: mod.rs  weight.rs
src/graph/algorithm/traversal/: bfs.rs  dfs.rs  dijkstra.rs  mod.rs  toposort.rs
src/graph/algorithm/visit/: generational.rs  hash.rs  mod.rs
src/graph/core/: checked.rs  graph.rs  graph_ext.rs  handle.rs  mod.rs
src/graph/property_map/: color.rs  mod.rs
src/graph/storage/: hash_map.rs  mod.rs  vec.rs
src/graph/topology/: edge_topology.rs  endpoint_topology.rs  hash_map.rs  mod.rs  neighbor_topology.rs  undirected.rs  vec.rs  vertex_set.rs
tests/: graph_basics.rs  new_traversals.rs  safety_validation.rs  storage_topology_impls.rs  traversal_algorithms.rs  visit_maps.rs
