[package]
name = "sinistra"
version = "0.1.0-202603071506"
edition = "2024"
authors = ["Buğra Kadirhan <bugrakadirhan@proton.me>"]
description = "A generic graph framework with pluggable storage and topology and streaming graph algorithms."
repository = "https://github.com/wintermarstice/sinistra"
license = "MIT"
documentation = "https://docs.rs/sinistra"
keywords = ["graph", "graph-algorithms", "bfs", "dfs", "dijkstra"]
categories = ["algorithms", "data-structures"]

[dependencies]
